# sagecompass

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DOCS_KB.md  LEARNING.md  LICENSE  README.md  REVIEW_CHECKLIST.md  ROADMAP.md  Roadmap-v4-alpha5.md  UNRELEASED.md  framework.md  instructions.txt  langgraph.json  pyproject.toml  requirements.txt
.ddev/: config.yaml  (+1 more)
langgraph/backend/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  RULES.md  langgraph.json  pyproject.toml
langgraph/backend/.semgrep/: fast.yml
langgraph/backend/.shared/: README.md  components.yml  contracts.yml  efficient-commands.md  platform.yml  sys.yml
langgraph/backend/.shared/maps/: components.yml  contracts.yml  platform.yml
langgraph/backend/.shared/references/: components.yml  sys.yml
langgraph/backend/.shared/references/rules/: INDEX.md  agents.md  graphs.md  guardrails-and-memory.md  middlewares.md  platform.md  quality-gates.md  schemas.md  state-contracts.md  tools.md
langgraph/backend/.shared/rules/: INDEX.md  agents.md  di-import-purity.md  graphs.md  guardrails-and-memory.md  middlewares.md  nodes.md  platform.md  prompts.md  state-contracts.md  testing.md  tools.md
langgraph/backend/app/: AGENTS.md  README.md  RULES.md  __init__.py  dev_graph.py  main.py  runtime.py  state.py
langgraph/backend/app/agents/: AGENTS.md  README.md  __init__.py  global_system.prompt  utils.py
langgraph/backend/app/agents/ambiguity/: __init__.py  agent.py  schema.py
langgraph/backend/app/agents/ambiguity_clarification/: __init__.py  agent.py  schema.py
langgraph/backend/app/agents/ambiguity_detector/: __init__.py  agent.py  schema.py
langgraph/backend/app/agents/ambiguity_scan/: agent.py  schema.py
langgraph/backend/app/agents/problem_framing/: __init__.py  agent.py  config.yaml  hilp_policy.py  mw.py  schema.py
langgraph/backend/app/agents/translator/: agent.py  config.yaml  mw.py  schema.py
langgraph/backend/app/graphs/: AGENTS.md  README.md  __init__.py  graph.py  write_graph.py
langgraph/backend/app/graphs/phases/: __init__.py  contract.py
langgraph/backend/app/graphs/subgraphs/: __init__.py
langgraph/backend/app/middlewares/: AGENTS.md  README.md  __init__.py  context_docs.py  dynamic_prompt.py  dynamic_prompts.py  guardrails.py  hilp.py  tool_errors.py
langgraph/backend/app/nodes/: AGENTS.md  CLAUDE.md  README.md  __init__.py  ambiguity_clarification.py  ambiguity_clarification_external.py  ambiguity_detection.py  ambiguity_scan.py  ambiguity_supervisor.py  clarify_ambiguity.py  detect_language.py  gating_guardrails.py  hilp.py  phase_supervisor.py  problem_framing.py  retrieve_context.py  supervisor.py  translation.py  write_vector_content.py
langgraph/backend/app/platform/: AGENTS.md  README.md  __init__.py
langgraph/backend/app/platform/adapters/: README.md  __init__.py  agents.py  evidence.py  guardrails.py  logging.py  node.py  phases.py
langgraph/backend/app/platform/config/: README.md  __init__.py  env.py  file_loader.py  paths.py
langgraph/backend/app/platform/contract/: README.md  __init__.py  agents.py  artifacts.py  evidence.py  guardrails.py  logging.py  phases.py  prompts.py  state.py  structured_output.py  tools.py
langgraph/backend/app/platform/observability/: README.md  debug.py
langgraph/backend/app/platform/policy/: README.md  __init__.py  guardrails.py
langgraph/backend/app/platform/runtime/: README.md  __init__.py  evidence.py  phases.py  state_helpers.py
langgraph/backend/app/platform/utils/: __init__.py  agent_utils.py  model_factory.py  provider_config.py
langgraph/backend/app/policies/: __init__.py  guardrails.py
langgraph/backend/app/schemas/: AGENTS.md  CLAUDE.md  README.md  __init__.py  ambiguities.py  clarification.py  field_types.py
langgraph/backend/app/state/: AGENTS.md  CLAUDE.md  README.md  __init__.py  ambiguity.py  clarification.py  gating.py  state.py  write_state.py
langgraph/backend/app/tools/: AGENTS.md  CLAUDE.md  README.md  __init__.py  context_lookup.py  nothingizer.py  vector_writer.py
langgraph/backend/app/ui/: AGENTS.md  __init__.py  hilp.py  i18n.py  state.py  ui.py
langgraph/backend/app/ui/buttons/: __init__.py  hilp.py
langgraph/backend/app/utils/: README.md  __init__.py  debug.py  env.py  file_loader.py  hilp_core.py  lang.py  logger.py  model_factory.py  paths.py  phases.py  provider_config.py  state_helpers.py  vector_factory.py
langgraph/backend/config/: guardrails.yaml
langgraph/backend/config/provider/: anthropic.yaml  perplexity.yaml
langgraph/backend/tests/: README.md  conftest.py  test_contracts.py  test_problem_framing.py  test_state_shape.py  test_supervisor.py
langgraph/backend/tests/agents/: test_utils.py
langgraph/backend/tests/agents/problem_framing/: __init__.py  test_hilp_policy.py  test_problem_framing.py
langgraph/backend/tests/architecture/: test_adapter_boundary.py
langgraph/backend/tests/contracts/: _helpers.py  test_graph_contracts.py  test_import_boundary_contracts.py  test_import_side_effect_contracts.py  test_interrupt_contracts.py  test_interrupt_contracts_real.py  test_layout_contracts.py  test_runtime_context_contracts.py  test_state_contracts.py  test_state_update_whitelist.py
langgraph/backend/tests/hilp/: test_graph_hilp_cycle.py  test_hilp_middleware.py  test_hilp_node.py  test_hilp_policy.py  test_supervisor_routes_to_hilp.py
langgraph/backend/tests/integration/agents/: test_ambiguity_scan_openai.py  test_problem_framing_openai.py  test_problem_framing_trajectory.py
langgraph/backend/tests/integration_tests/: test_standard_placeholders_integration.py
langgraph/backend/tests/middlewares/: test_dynamic_prompt.py  test_hilp.py
langgraph/backend/tests/nodes/: test_ambiguity_detection.py  test_clarify_ambiguity.py  test_gating_guardrails.py  test_problem_framing_node.py  test_supervisor.py
langgraph/backend/tests/stubs/: dotenv.py  gradio.py  yaml.py
langgraph/backend/tests/tools/: test_nothingizer_tool.py
langgraph/backend/tests/ui/: test_ui_hilp.py
langgraph/backend/tests/unit_tests/: test_standard_placeholders.py
(+527 files in other folders)
