[project]
name = "sagecompass"
version = "1.0.0-alpha1"
description = "AI reasoning runtime for SageCompass"
authors = [{ name = "Gábor M." }]
requires-python = ">=3.12,<3.13"

dependencies = [
    "langchain>=1.0.4,<2.0.0",
    "langchain-openai",
    "langchain-perplexity",
    "gradio",
    "python-dotenv",
    "pyyaml",
    "jsonschema (>=4.25.1,<5.0.0)",
    "aim (==3.25.0)",
    "langchain-community (>=0.4.1,<0.5.0)"
]

[tool.poetry]
packages = [{ include = "app" }]

[tool.poetry.group.dev.dependencies]
ruff = "*"
black = "*"
