[project]
name = "sagecompass"
version = "1.0.0-alpha5"
description = "AI reasoning runtime for SageCompass"
authors = [{ name = "Gábor M." }]
requires-python = ">=3.12,<3.13"

dependencies = [
    "langchain>=1.0.4,<2.0.0",
    "langchain-chroma>=0.1.2",
    "langchain-community>=0.4.1,<0.5.0",
    "langchain-openai",
    "langchain-perplexity",
    "langgraph>=1.0.3,<2.0.0",
    "python-dotenv",
    "pyyaml",
    "jsonschema>=4.25.1,<5.0.0",
    "ipython>=9.7.0,<10.0.0",
    "pydantic>=2.12.4,<3.0.0",
    "langchain-docling>=2.0.0",
    "langchain-anthropic>=1.2.0",
    "chromadb>=1.3.5",
    "langgraph-cli[inmem]>=0.4.11",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.19",
    "pydevd-pycharm>=253.29346.142",
    "langchain-tests==1.1.2",
    "pytest>=8.4.2",
    "poethepoet>=0.39.0",
    "ruff>=0.14.10",
    "mypy>=1.19.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
  "compliance: flavoritism",
  "structural: more flavoritism",
  "integration: tests that hit live/external services (opt-in)",
  "real_deps: tests that run against real dependencies without network calls"
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
# Baseline quality + imports + modernize + bugbear + simplifications + docstrings
select = ["E", "F", "I", "UP", "B", "SIM", "D"]
# Keep this list short; only ignore rules you truly disagree with.
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests don't need full docstring coverage.
"tests/**" = ["D"]

[tool.poe]
# Optional: load env files automatically for tasks
# envfile = [".env", ".env.local"]

[tool.poe.tasks]
# ---- Test lanes ----
test = { ref = "test_unit", help = "Default: run offline unit test lane" }
test_unit = { cmd = "pytest tests/unit -v -m \"not real_deps and not integration\"", help = "Unit lane (fast, offline)" }
test_real = { cmd = "pytest -v -m real_deps", help = "Real-deps lane (offline)" }
test_integration = { cmd = "pytest tests/integration -v -m integration", help = "Integration lane (may require credentials)" }

# ---- Linting / Formatting / Typing ----
lint = { cmd = "ruff check .", help = "Run Ruff linter" }
fmt  = { cmd = "ruff format .", help = "Run Ruff formatter" }
type = { cmd = "mypy .", help = "Run mypy type checks" }
