[project]
name = "sagecompass"
version = "6.1.0"
description = "AI reasoning runtime for SageCompass"
authors = [{ name = "Gábor M." }]
requires-python = ">=3.12,<3.13"

# ---- Dependencies ----
dependencies = [
    "langchain>=1.0.4,<2.0.0",
    "langchain-chroma>=0.1.2",
    "langchain-community>=0.4.1,<0.5.0",
    "langchain-openai",
    "langchain-perplexity",
    "langgraph>=1.0.3,<2.0.0",
    "python-dotenv",
    "pyyaml",
    "jsonschema>=4.25.1,<5.0.0",
    "ipython>=9.7.0,<10.0.0",
    "pydantic>=2.12.4,<3.0.0",
    "langchain-docling>=2.0.0",
    "langchain-anthropic>=1.2.0",
    "chromadb>=1.3.5",
    "langgraph-cli[inmem]>=0.4.11",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.19",
    "pydevd-pycharm>=253.29346.142",
    "langchain-tests==1.1.2",
    "pytest>=8.4.2",
    "poethepoet>=0.39.0",
    "ruff>=0.14.10",
    "mypy>=1.19.1",
    "pylint>=4.0.4",
    "semgrep>=1.146.0",
]

# ---- Tooling config ----
[tool.uv]
environments = ["platform_python_implementation == 'CPython'"]


# ---- Pytest config ----
[tool.pytest.ini_options]
pythonpath = ["."]

# Folder structure: tests/[test_type(unit/integration/e2e])/[test_category(architecture/orchestration/platform)]
testpaths = [
  "tests/unit/architecture",
  "tests/unit/platform",
  "tests/unit/orchestration",
  "tests/integration/platform",
  "tests/integration/orchestration",
  "tests/e2e",
]
addopts = "--strict-markers"

# Test markers for categorizing tests by purpose and scope
markers = [
  # Test Type Markers (by scope)
  "unit: Fast, isolated tests with no external dependencies",
  "integration: Tests crossing component boundaries (may use test fixtures)",
  "e2e: End-to-end workflow tests (full pipeline validation)",

  # Test Category Markers (organizational categories)
  "architecture: Hexagonal architecture enforcement (import rules, layer boundaries)",
  "orchestration: LangGraph orchestration components (agents, nodes, graphs, middlewares, tools)",
  "platform: Platform layer tests (hexagonal architecture - core, adapters, runtime)",
]

# ---- Structural QA - Pylint config ----
[tool.pylint.main]

[tool.pylint.messages_control]
disable = ["all"]

# linting rules, these help to implement tests more easily.
enable = [
  "duplicate-code",       # Detect code duplication
  "too-many-lines",       # Module length limits
  "too-many-statements",  # Function complexity limits
  "too-many-branches",    # Branching complexity limits
]

# per function/method, same as above.
[tool.pylint.design]
max-branches = 12         # Maximum branches per function (prevents complex control flow)
max-statements = 50       # Maximum statements per function (keeps functions focused)

# per file
[tool.pylint.format]
max-module-lines = 300    # Prevent module size and responsibility bloating

# detects repetition
[tool.pylint.similarities]
min-similarity-lines = 4  # Minimum consecutive identical lines to trigger duplication warning
ignore-imports = true
ignore-signatures = true

[tool.ruff]
target-version = "py312"
line-length = 120

# ---- Code QA - Ruff config ----
[tool.ruff.lint]
# Allow unused variables when they match framework requirements
# LangGraph requires runtime parameter in node functions even when unused
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?)|runtime)$"

# Baseline quality + imports + modernize + bugbear + simplifications + docstrings
select = [
    "ARG",  # flake8-unused-arguments
    "B",            # flake8-bugbear
    "C90",                # mccabe complexity
    "D",                # pydocstyle (docstrings)
    "E",               # pycodestyle errors
    "F",                  # pyflakes
    "I",                     # isort (import sorting)
    "PERF",                # performance
    "RUF",        # Ruff-specific rules
    "SIM",           # flake8-simplify
    "UP",               # pyupgrade (modernize syntax)
]

# Keep this list short; only ignore rules you truly disagree with.
ignore = []  # All TC rules disabled by removing from select list above

[tool.ruff.lint.mccabe]
max-complexity = 12 # Maximum cyclomatic complexity (prevents complex code paths)

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests don't need full docstring coverage.
"tests/**" = ["D"]


# ---- Type checking QA - MYPY config ----
[tool.mypy]
python_version = "3.12"
no_implicit_optional = true # Reject Optional[T] when None is implicit (requires explicit typing)
disallow_incomplete_defs = true # Require complete type annotations on all function definitions
check_untyped_defs = true # Check body of functions even if they lack type annotations
warn_unused_ignores = true # Warn about unnecessary type: ignore comments
warn_redundant_casts = true # Warn about unnecessary type casts

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false # Allow test functions to omit type annotations (improves readability)

# ---- Task automation - poe config ----
[tool.poe]
# Optional: load env files automatically for tasks
# envfile = [".env", ".env.local"]

[tool.poe.tasks]
# -- QA lanes (Consolidated)
qa_fast = { cmd = "bash -lc 'set -euo pipefail; mkdir -p ./.cache/uv; export UV_CACHE_DIR=\"$PWD/.cache/uv\"; uv run poe fmt; uv run poe lint_fix; uv run poe lint; uv run poe pylint_struct; uv run poe semgrep_fast'", help = "Fast lane (self-correcting): fmt + ruff safe fixes, lint, pylint_struct, semgrep_fast" }
qa = { cmd = "bash -lc 'set -euo pipefail; mkdir -p ./.cache/uv; export UV_CACHE_DIR=\"$PWD/.cache/uv\"; uv run poe qa_fast; uv run poe type_stats; uv run poe test_unit'", help = "Full lane: qa_fast + mypy summary + unit tests" }

# -- Test lanes
test = { ref = "test_unit", help = "Default: run offline unit test lane" }
test_unit = { cmd = "pytest tests/unit -v -m \"not real_deps and not integration\"", help = "Unit lane (fast, offline)" }
test_real = { cmd = "pytest -v -m real_deps", help = "Real-deps lane (offline)" }
test_integration = { cmd = "pytest tests/integration -v -m integration", help = "Integration lane (may require credentials)" }

# ---- Linting / Formatting / Typing ----
pylint_struct = { cmd = "pylint app", help = "Pylint structural checks (dup + modularity)" }
lint = { cmd = "ruff check .", help = "Run Ruff linter" }
lint_fix = { cmd = "ruff check . --fix", help = "Run Ruff linter with safe fixes" }
lint_fix_unsafe = { cmd = "ruff check . --fix --unsafe-fixes --output-format concise", help = "Run Ruff linter with unsafe fixes" }
lint_stats = { cmd = "ruff check . --statistics", help = "Ruff lint statistics (for agent decisions)" }

fmt = { cmd = "ruff format .", help = "Formats code" }
fmt_check = { cmd = "ruff format --check .", help = "Checks formatting" }

type = { cmd = "mypy .", help = "Run mypy typecheck" }
type_stats = { cmd = "mypy . --pretty --color-output --error-summary --show-error-codes", help = "Mypy summary (for agent decisions)" }

# ---- semgrep checks ----
semgrep_fast = { cmd = "bash -lc 'set -euo pipefail; mkdir -p ./.cache/uv; export SEMGREP_LOG_FILE=\"$PWD/.cache/uv/semgrep.log\"; export SEMGREP_VERSION_CACHE_PATH=\"$PWD/.cache/uv/semgrep_version\"; semgrep --config .semgrep/fast.yml'", help = "Semgrep fast-lane architecture checks" }

[tool.poe.tasks.type_stats_scoped]
cmd = "mypy ${path} --follow-imports=skip --pretty --color-output --error-summary --show-error-codes"
help = "Typecheck stats for a given component path"

  [[tool.poe.tasks.type_stats_scoped.args]]
  name = "path"
  positional = true
  required = true
  help = "Path to typecheck, e.g. graphs"

[tool.poe.tasks.type_scoped]
cmd = "mypy app/${path} --follow-imports=skip --error-summary --show-error-codes"
help = "Typecheck a given component path"

  [[tool.poe.tasks.type_scoped.args]]
  name = "path"
  positional = true
  required = true
  help = "Path to typecheck, e.g. graphs"
